# reckoner

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  aliases.js  crates.js  help.html  index.html  release.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/scripts/: prep_documentation.sh
.github/workflows/: documentation.yml  rust-ci.yml  rust.yml
creachadair-imath-sys/: Cargo.toml  build.rs
creachadair-imath-sys/tests/: smoke_test.rs
creachadair_imath_sys/: all.html  constant.MP_MAX_RADIX.html  constant.MP_MIN_RADIX.html  constant.mp_round_mode_MP_ROUND_DOWN.html  constant.mp_round_mode_MP_ROUND_HALF_DOWN.html  constant.mp_round_mode_MP_ROUND_HALF_UP.html  constant.mp_round_mode_MP_ROUND_UP.html  fn.mp_error_string.html  fn.mp_int_abs.html  fn.mp_int_add.html  fn.mp_int_add_value.html  fn.mp_int_alloc.html  fn.mp_int_binary_len.html  fn.mp_int_clear.html  fn.mp_int_compare.html  fn.mp_int_compare_unsigned.html  fn.mp_int_compare_uvalue.html  fn.mp_int_compare_value.html  fn.mp_int_compare_zero.html  fn.mp_int_copy.html  fn.mp_int_count_bits.html  fn.mp_int_default_precision.html  fn.mp_int_div.html  fn.mp_int_div_pow2.html  fn.mp_int_div_value.html  fn.mp_int_divisible_value.html  fn.mp_int_egcd.html  fn.mp_int_expt.html  fn.mp_int_expt_full.html  fn.mp_int_expt_value.html  fn.mp_int_exptmod.html  fn.mp_int_exptmod_bvalue.html  fn.mp_int_exptmod_evalue.html  fn.mp_int_exptmod_known.html  fn.mp_int_find_prime.html  fn.mp_int_free.html  fn.mp_int_gcd.html  fn.mp_int_init.html  fn.mp_int_init_copy.html  fn.mp_int_init_size.html  (+100 more)
examples/: catalan.rs  factorial.rs  fibonnaci.rs  pell_numbers.rs  pi.rs
examples/common/: mod.rs
generate/op_descriptions/: integer_addition.json  integer_addition_assign.json  integer_division_assign.json  integer_multiplication.json  integer_multiplication_assign.json
generate/templates/: integer_ops_division.rs.template  integer_ops_division_assign.rs.template  integer_ops_multiplication.rs.template  integer_ops_multiplication_assign.rs.template  integer_ops_remainder_assign.rs.template
imath-sys/: Cargo.toml  build.rs
imath-sys/tests/: smoke_test.rs
imath_sys/: all.html  constant.MP_MAX_RADIX.html  constant.MP_MIN_RADIX.html  constant.mp_round_mode_MP_ROUND_DOWN.html  constant.mp_round_mode_MP_ROUND_HALF_DOWN.html  constant.mp_round_mode_MP_ROUND_HALF_UP.html  constant.mp_round_mode_MP_ROUND_UP.html  fn.mp_error_string.html  fn.mp_int_abs.html  fn.mp_int_add.html  fn.mp_int_add_value.html  fn.mp_int_alloc.html  fn.mp_int_binary_len.html  fn.mp_int_clear.html  fn.mp_int_compare.html  fn.mp_int_compare_unsigned.html  fn.mp_int_compare_uvalue.html  fn.mp_int_compare_value.html  fn.mp_int_compare_zero.html  fn.mp_int_copy.html  fn.mp_int_count_bits.html  fn.mp_int_default_precision.html  fn.mp_int_div.html  fn.mp_int_div_pow2.html  fn.mp_int_div_value.html  fn.mp_int_divisible_value.html  fn.mp_int_egcd.html  fn.mp_int_expt.html  fn.mp_int_expt_full.html  fn.mp_int_expt_value.html  fn.mp_int_exptmod.html  fn.mp_int_exptmod_bvalue.html  fn.mp_int_exptmod_evalue.html  fn.mp_int_exptmod_known.html  fn.mp_int_find_prime.html  fn.mp_int_free.html  fn.mp_int_gcd.html  fn.mp_int_init.html  fn.mp_int_init_copy.html  fn.mp_int_init_size.html  (+102 more)
reckoner/: all.html  enum.Error.html  enum.RoundMode.html  index.html  sidebar-items.js  struct.Integer.html  struct.Rational.html
reckoner/error/: enum.Error.html
reckoner/integer/: struct.Integer.html
reckoner/rational/: enum.RoundMode.html  struct.Rational.html
scripts/: generate_all_integer_ops.sh  generate_integer_ops.py
search.desc/creachadair_imath_sys/: creachadair_imath_sys-desc-0-.js
search.desc/reckoner/: reckoner-desc-0-.js
src/: error.rs  integer.rs  lib.rs  rational.rs
src/creachadair_imath_sys/: lib.rs.html
src/imath_sys/: lib.rs.html
src/integer/: comparison.rs  conversions.rs  ops.rs
tests/: creachadair_imath.rs
wrath/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Integer.html
(+179 files in other folders)
