[package]
name = "rimath"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/declanvk/rimath"
categories = ["science"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imath-sys = { path = "imath-sys/" }
cfg-if = "0.1.10"

[workspace]
members = ["imath-sys"]
