[package]
name = "reckoner"
description = " A high level arbitrary precision arithmetic library supporting integer and rational numbers."
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/declanvk/reckoner"
categories = ["science"]
license = "MIT"

[dependencies]
imath-sys = { version = "0.1.0", path = "imath-sys/" }
cfg-if = "0.1.10"

[workspace]
members = ["imath-sys"]

[dev-dependencies]
static_assertions = "1.1.0"
