[package]
name = "reckoner"
description = " A high level arbitrary precision arithmetic library supporting integer and rational numbers."
version = "0.1.2-alpha.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/declanvk/reckoner"
categories = ["science"]
license = "MIT"

[dependencies]
creachadair-imath-sys = { version = "^0.1.2-alpha.0", path = "creachadair-imath-sys/" }
cfg-if = "1.0.0"

[workspace]
members = ["creachadair-imath-sys"]

[dev-dependencies]
static_assertions = "1.1.0"
