[package]
name = "creachadair-imath-sys"
description = "FFI bindings to creachadair imath"
version = "0.1.3-alpha.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/declanvk/reckoner"
categories = ["external-ffi-bindings", "science"]
license = "MIT"

build = "build.rs"
links = "imath"
include = [
  "src/*",
  "vendor/imath/*.{c,h}",
  "Cargo.toml",
  "build.rs"
]

[build-dependencies]
cc = "1.0.67"
bindgen = { version = "0.59.0", default-features = false, features = ["runtime"] }
dunce = "1.0.1"
