[package]
name = "creachadair-imath-sys"
description = "FFI bindings to creachadair imath"
version = "0.2.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/declanvk/reckoner"
categories = ["external-ffi-bindings", "science"]
keywords = ["ffi-bindings"]
license = "MIT"

build = "build.rs"
links = "imath"
include = [
  "src/*",
  "vendor/imath/*.{c,h}",
  "Cargo.toml",
  "build.rs"
]

[build-dependencies]
cc = "1.0.67"
bindgen = { version = "0.61.0", default-features = false, features = ["runtime"] }
dunce = "1.0.1"
