[package]
name = "imath-sys"
version = "0.1.0"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/declanvk/reckoner"
categories = ["external-ffi-bindings", "science"]
license = "MIT"

build = "build.rs"
links = "imath"
include = [
  "src/*",
  "vendor/imath/*.{c,h}",
  "Cargo.toml",
  "build.rs"
]

[dependencies]

[build-dependencies]
cc = "1.0.46"
bindgen = "0.51.1"
dunce = "1.0.0"
